2010-08-25	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* spheapprot/.cvsignore, spheapprot/Makefile.am,
	spheapprot/spheapprot.doc, spheapprot/spheapprot.scn: New files.
	* Makefile.am, configure.ac: Reflect changes above.

2010-08-24	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* spchain/init.c, spchain/spchain.doc, spchain/spchain.scn: New test
	cases.

2010-08-23	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* spfatal24/.cvsignore, spfatal24/Makefile.am,
	spfatal24/spfatal24.doc, spfatal24/spfatal24.scn,
	spfatal24/testcase.h, spfatal25/.cvsignore, spfatal25/Makefile.am,
	spfatal25/spfatal25.doc, spfatal25/spfatal25.scn,
	spfatal25/testcase.h: New files.
	* Makefile.am, configure.ac: Reflect changes above.

2010-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1658/cpukit
	* Makefile.am, configure.ac: If the system is not up, consider it a
	fatal error. This eliminated sp61 and added spfatal23.
	* spfatal23/.cvsignore, spfatal23/Makefile.am, spfatal23/spfatal23.doc,
	spfatal23/spfatal23.scn, spfatal23/testcase.h: New files.
	* sp61/.cvsignore, sp61/Makefile.am, sp61/init.c, sp61/sp61.doc,
	sp61/sp61.scn: Removed.

2010-08-10	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1663/testing
	* spmkdir/init.c: New cases to get the error path in rtems_mkdir
	routine.

2010-08-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1661/testing
	* spfifo02/init.c, spmountmgr01/init.c, spprivenv01/init.c: Eliminate
	most references to RTEMS_Malloc_Heap.

2010-08-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* sp09/screen12.c: Update for rtems_region_create() changes.
	* sp09/sp09.scn: Update.

2010-08-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1647/testing
	* spsize/size.c: Remove redundant initialize uninitialized to 0.

2010-07-30	Gedare Bloom <giddyup44@yahoo.com>

	PR 1599/cpukit
	* spsize/size.c: Rename _Context_Switch_necessary to
	_Thread_Dispatch_necessary to more properly reflect the intent.
